[gd_scene load_steps=12 format=3 uid="uid://ccjmlvps2y1xm"]

[ext_resource type="Texture2D" uid="uid://dcc044bpqxskh" path="res://Artwork/light23.png" id="1_3ws8l"]
[ext_resource type="Script" uid="uid://cykinwwjtppk4" path="res://Scripts/robson.gd" id="1_nm5vw"]
[ext_resource type="Texture2D" uid="uid://bfcghl0tale2s" path="res://Artwork/Sprites/Inimigo/Rob√¥ Plataforma.png" id="2_3ws8l"]
[ext_resource type="Texture2D" uid="uid://dmu4lkjlb4gf4" path="res://Artwork/light2robot.png" id="3_35imc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k2gbc"]
radius = 11.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ws8l"]
size = Vector2(27, 15)

[sub_resource type="Animation" id="Animation_3ws8l"]
resource_name = "Idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rotate/Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_j8n7b"]
resource_name = "Off"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rotate/Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, -7.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rotate/PointLight2D3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Rotate/PointLight2D2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_35imc"]
resource_name = "Patrol"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rotate/Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.363181, 0.368548, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, -7.5), Vector2(0.5, -7.5), Vector2(0.5, -6), Vector2(0.5, -6)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rotate/PointLight2D3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Rotate/PointLight2D2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nm5vw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rotate/Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, -7.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rotate/PointLight2D3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Rotate/PointLight2D2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nm5vw"]
_data = {
&"Idle": SubResource("Animation_3ws8l"),
&"Off": SubResource("Animation_j8n7b"),
&"Patrol": SubResource("Animation_35imc"),
&"RESET": SubResource("Animation_nm5vw")
}

[node name="Robson" type="CharacterBody2D" groups=["Off"]]
collision_layer = 8
collision_mask = 17
script = ExtResource("1_nm5vw")
SPEED = 30
GRAVITY = 300.0
KNOCKBACK = 206.46
max_health = 25

[node name="Rotate" type="Node2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="Rotate"]
energy = 0.6
texture = ExtResource("1_3ws8l")

[node name="Icon" type="Sprite2D" parent="Rotate"]
texture = ExtResource("2_3ws8l")
hframes = 3

[node name="FloorCheck" type="RayCast2D" parent="Rotate"]
position = Vector2(-10, 4)
target_position = Vector2(0, 16)

[node name="WallCheck" type="RayCast2D" parent="Rotate"]
position = Vector2(-9, 7)
target_position = Vector2(-10, 0)

[node name="PointLight2D2" type="PointLight2D" parent="Rotate"]
position = Vector2(-70, -4)
scale = Vector2(-1, 0.489899)
color = Color(5.29438e-07, 0.476445, 0.24617, 1)
texture = ExtResource("3_35imc")

[node name="PointLight2D3" type="PointLight2D" parent="Rotate"]
position = Vector2(-60, -4)
scale = Vector2(-1, 0.489899)
color = Color(5.29438e-07, 0.476445, 0.24617, 1)
texture = ExtResource("3_35imc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_k2gbc")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -7.5)
shape = SubResource("RectangleShape2D_3ws8l")

[node name="ParticlePos" type="Marker2D" parent="."]
position = Vector2(26, -25)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nm5vw")
}
autoplay = "Idle"

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="OffTimer" type="Timer" parent="."]
wait_time = 6.0

[connection signal="timeout" from="PatrolTimer" to="." method="_on_patrol_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="OffTimer" to="." method="_on_off_timer_timeout"]
